// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`userReducer should handle all defined error types: rejected types USER_AUTH 1`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pending": false,
      "username": null,
    },
  },
  "type": "USER_AUTH_REJECTED",
}
`;

exports[`userReducer should handle all defined error types: rejected types USER_INFO 1`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "username": null,
    },
  },
  "type": "USER_INFO_REJECTED",
}
`;

exports[`userReducer should handle all defined error types: rejected types USER_LOGOUT 1`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pending": false,
      "username": null,
    },
  },
  "type": "USER_LOGOUT_REJECTED",
}
`;

exports[`userReducer should handle all defined fulfilled types: fulfilled types USER_AUTH 1`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": true,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
      "username": undefined,
    },
  },
  "type": "USER_AUTH_FULFILLED",
}
`;

exports[`userReducer should handle all defined fulfilled types: fulfilled types USER_INFO 1`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "username": null,
    },
  },
  "type": "USER_INFO_FULFILLED",
}
`;

exports[`userReducer should handle all defined fulfilled types: fulfilled types USER_LOGOUT 1`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "username": null,
    },
  },
  "type": "USER_LOGOUT_FULFILLED",
}
`;

exports[`userReducer should handle all defined pending types: pending types USER_AUTH 1`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "username": null,
    },
  },
  "type": "USER_AUTH_PENDING",
}
`;

exports[`userReducer should handle all defined pending types: pending types USER_INFO 1`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "username": null,
    },
  },
  "type": "USER_INFO_PENDING",
}
`;

exports[`userReducer should handle all defined pending types: pending types USER_LOGOUT 1`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "username": null,
    },
  },
  "type": "USER_LOGOUT_PENDING",
}
`;
